--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "html-webpack-plugin": "^5.3.1",
     "mini-css-extract-plugin": "^1.4.0",
     "style-loader": "^2.0.0",
+    "url-loader": "^4.1.1",
     "vue-loader": "^16.2.0",
     "webpack": "^5.28.0",
     "webpack-cli": "^4.5.0",
